# ear

./: .gitignore  CMakeLists.txt  help.txt  main.cpp
include/: functions.h
src/: functions.cpp  main.cpp
